# cnugs_hackathon

./: QUICKSTART_COLAB.md  README.md  TEAM_WORKFLOW.md  pyproject.toml  requirements.txt
experiments/: experiment_log.csv
notebooks/: 00_quick_data_check.ipynb  01_image_classifier_baseline.ipynb  02_denoising_autoencoder_baseline.ipynb  03_image_regression_baseline.ipynb  04_tabular_knn_curvefit_baseline.ipynb
references/extracted_code/: cnugs_lecture_1.py  cnugs_lecture_2_2.py  cnugs_lecture_3_1.py  cnugs_lecture_3_1_soln.py  cnugs_lecture_3_2.py  cnugs_lecture_3_2_soln.py  cnugs_lecture_4.py  cnugs_lecture_4_soln.py  cnugs_lecture_5.py  cnugs_lecture_5_soln.py
references/original_notebooks/: cnugs_lecture_1.ipynb  cnugs_lecture_2_2.ipynb  cnugs_lecture_3_1.ipynb  cnugs_lecture_3_1_soln.ipynb  cnugs_lecture_3_2.ipynb  cnugs_lecture_3_2_soln.ipynb  cnugs_lecture_4.ipynb  cnugs_lecture_4_soln.ipynb  cnugs_lecture_5.ipynb  cnugs_lecture_5_soln.ipynb
scripts/: smoke_test.py
src/cnugs_ml/: __init__.py  classical.py  data.py  models.py  plots.py  regression.py  submission.py  train.py
