[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cnugs-ml"
version = "0.1.0"
description = "Reusable utilities and baselines for the CNUGS AI/ML hackathon."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]
